--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=JavaFinalProject
+application.vendor=Yazhou
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,10 +27,55 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/JavaFinalProject.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.aspectjrt.jar=C:\\Users\\Yazho\\Desktop\\aws-java-sdk-1.10.32\\aws-java-sdk-1.10.32\\third-party\\aspectj-1.6\\aspectjrt.jar
+file.reference.aspectjweaver.jar=C:\\Users\\Yazho\\Desktop\\aws-java-sdk-1.10.32\\aws-java-sdk-1.10.32\\third-party\\aspectj-1.6\\aspectjweaver.jar
+file.reference.aws-java-sdk-1.10.32-javadoc.jar=C:\\Users\\Yazho\\Desktop\\aws-java-sdk-1.10.32\\aws-java-sdk-1.10.32\\lib\\aws-java-sdk-1.10.32-javadoc.jar
+file.reference.aws-java-sdk-1.10.32-sources.jar=C:\\Users\\Yazho\\Desktop\\aws-java-sdk-1.10.32\\aws-java-sdk-1.10.32\\lib\\aws-java-sdk-1.10.32-sources.jar
+file.reference.aws-java-sdk-1.10.32.jar=C:\\Users\\Yazho\\Desktop\\aws-java-sdk-1.10.32\\aws-java-sdk-1.10.32\\lib\\aws-java-sdk-1.10.32.jar
+file.reference.aws-java-sdk-flow-build-tools-1.10.32.jar=C:\\Users\\Yazho\\Desktop\\aws-java-sdk-1.10.32\\aws-java-sdk-1.10.32\\lib\\aws-java-sdk-flow-build-tools-1.10.32.jar
+file.reference.commons-codec-1.6.jar=C:\\Users\\Yazho\\Desktop\\aws-java-sdk-1.10.32\\aws-java-sdk-1.10.32\\third-party\\commons-codec-1.6\\commons-codec-1.6.jar
+file.reference.commons-logging-1.1.3.jar=C:\\Users\\Yazho\\Desktop\\aws-java-sdk-1.10.32\\aws-java-sdk-1.10.32\\third-party\\commons-logging-1.1.3\\commons-logging-1.1.3.jar
+file.reference.freemarker-2.3.18.jar=C:\\Users\\Yazho\\Desktop\\aws-java-sdk-1.10.32\\aws-java-sdk-1.10.32\\third-party\\freemarker-2.3.18\\freemarker-2.3.18.jar
+file.reference.httpclient-4.3.6.jar=C:\\Users\\Yazho\\Desktop\\aws-java-sdk-1.10.32\\aws-java-sdk-1.10.32\\third-party\\httpcomponents-client-4.3\\httpclient-4.3.6.jar
+file.reference.httpcore-4.3.3.jar=C:\\Users\\Yazho\\Desktop\\aws-java-sdk-1.10.32\\aws-java-sdk-1.10.32\\third-party\\httpcomponents-client-4.3\\httpcore-4.3.3.jar
+file.reference.jackson-annotations-2.5.3.jar=C:\\Users\\Yazho\\Desktop\\aws-java-sdk-1.10.32\\aws-java-sdk-1.10.32\\third-party\\jackson-annotations-2.5.3\\jackson-annotations-2.5.3.jar
+file.reference.jackson-core-2.5.3.jar=C:\\Users\\Yazho\\Desktop\\aws-java-sdk-1.10.32\\aws-java-sdk-1.10.32\\third-party\\jackson-core-2.5.3\\jackson-core-2.5.3.jar
+file.reference.jackson-databind-2.5.3.jar=C:\\Users\\Yazho\\Desktop\\aws-java-sdk-1.10.32\\aws-java-sdk-1.10.32\\third-party\\jackson-databind-2.5.3\\jackson-databind-2.5.3.jar
+file.reference.javax.mail-api-1.4.6.jar=C:\\Users\\Yazho\\Desktop\\aws-java-sdk-1.10.32\\aws-java-sdk-1.10.32\\third-party\\javax-mail-1.4.6\\javax.mail-api-1.4.6.jar
+file.reference.jcommon-1.0.23.jar=C:\\Users\\Yazho\\Desktop\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19-swt.jar=C:\\Users\\Yazho\\Desktop\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19-swt.jar
+file.reference.jfreechart-1.0.19.jar=C:\\Users\\Yazho\\Desktop\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19.jar
+file.reference.joda-time-2.8.1.jar=C:\\Users\\Yazho\\Desktop\\aws-java-sdk-1.10.32\\aws-java-sdk-1.10.32\\third-party\\joda-time-2.8.1\\joda-time-2.8.1.jar
+file.reference.spring-beans-3.0.7.jar=C:\\Users\\Yazho\\Desktop\\aws-java-sdk-1.10.32\\aws-java-sdk-1.10.32\\third-party\\spring-3.0\\spring-beans-3.0.7.jar
+file.reference.spring-context-3.0.7.jar=C:\\Users\\Yazho\\Desktop\\aws-java-sdk-1.10.32\\aws-java-sdk-1.10.32\\third-party\\spring-3.0\\spring-context-3.0.7.jar
+file.reference.spring-core-3.0.7.jar=C:\\Users\\Yazho\\Desktop\\aws-java-sdk-1.10.32\\aws-java-sdk-1.10.32\\third-party\\spring-3.0\\spring-core-3.0.7.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19-swt.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.aws-java-sdk-1.10.32.jar}:\
+    ${file.reference.aws-java-sdk-1.10.32-javadoc.jar}:\
+    ${file.reference.aws-java-sdk-1.10.32-sources.jar}:\
+    ${file.reference.aws-java-sdk-flow-build-tools-1.10.32.jar}:\
+    ${file.reference.aspectjrt.jar}:\
+    ${file.reference.aspectjweaver.jar}:\
+    ${file.reference.commons-codec-1.6.jar}:\
+    ${file.reference.commons-logging-1.1.3.jar}:\
+    ${file.reference.freemarker-2.3.18.jar}:\
+    ${file.reference.httpclient-4.3.6.jar}:\
+    ${file.reference.httpcore-4.3.3.jar}:\
+    ${file.reference.jackson-annotations-2.5.3.jar}:\
+    ${file.reference.jackson-core-2.5.3.jar}:\
+    ${file.reference.jackson-databind-2.5.3.jar}:\
+    ${file.reference.javax.mail-api-1.4.6.jar}:\
+    ${file.reference.joda-time-2.8.1.jar}:\
+    ${file.reference.spring-beans-3.0.7.jar}:\
+    ${file.reference.spring-context-3.0.7.jar}:\
+    ${file.reference.spring-core-3.0.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -53,7 +99,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=DMChartUI
+main.class=OriginalChartUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
